1. resolved : webkit-overflow/page x scrolling issue 2. resloved : header re-render bug fix

--- a/client/src/css/common.css
+++ b/client/src/css/common.css
@@ -1,3 +1,4 @@
+
 .center-block {
   width: 100%;
   height: 100%;
@@ -11,17 +12,16 @@
 }
 
 .page {
-  width:100%;
-  height:100vh;
   position:absolute;
+  width:100vw;
+  height:100vh;
   background-color:white;
-  overflow:hidden;
+  overflow-y:hidden;
 }
 
 .pre-scrollable {
-  max-height:100vh;
-  padding-bottom:20vh;
-  overflow: auto;
+  max-height:95vh;
+  padding-bottom:10vh;
   background-color:white;
   -webkit-overflow-scrolling:touch;
 }
